BUG TEXT AND COLOR

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                         <div class="info">
                             <p class="sub-title">Welcome to Besnik Agency</p>
                             <h1 class="title">Discover a place you'll love to live.</h1>
-                            <p class="desc">get the best real estate deals first,before they hit the mass market! HOT
-                                FORECLOSURE DEALS with one simple search</p>
+                            <p class="desc">Get the best real estate deals first,
+                                before they hit the mass market! hot foreclosure deals with one simple search</p>
                             <!-- call hero action -->
                             <a href="#!" class="btn hero-cta">More About Us</a>
                         </div>
