--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                     <p class="desc">5 Star Ratings (2k+ Review)</p>
                 </div>
                 <div class="image">
-                    <img src="./assets/img/meUndies.svg" alt="meUndies">
+                    <img src="./assets/img/me-undies.svg" alt="meUndies">
                     <img src="./assets/img/slack.svg" alt="slack">
                     <img src="./assets/img/amazon.svg" alt="amazon">
-                    <img src="./assets/img/wooCommerce.svg" alt="wooCommerce">
+                    <img src="./assets/img/woo-commerce.svg" alt="wooCommerce">
                     <img src="./assets/img/sitepoint.svg" alt="sitepoint">
                 </div>
             </div>
