--- a/index.html
+++ b/index.html
@@ -72,11 +72,21 @@
                     <p class="desc">5 Star Ratings (2k+ Review)</p>
                 </div>
                 <div class="image">
-                    <img src="./assets/img/me-undies.svg" alt="meUndies">
-                    <img src="./assets/img/slack.svg" alt="slack">
-                    <img src="./assets/img/amazon.svg" alt="amazon">
-                    <img src="./assets/img/woo-commerce.svg" alt="wooCommerce">
-                    <img src="./assets/img/sitepoint.svg" alt="sitepoint">
+                    <a href="#!">
+                        <img src="./assets/img/me-undies.svg" alt="meUndies">
+                    </a>
+                    <a href="#!">
+                        <img src="./assets/img/slack.svg" alt="slack">
+                    </a>
+                    <a href="#!">
+                        <img src="./assets/img/amazon.svg" alt="amazon">
+                    </a>
+                    <a href="#!">
+                        <img src="./assets/img/woo-commerce.svg" alt="wooCommerce">
+                    </a>
+                    <a href="#!">
+                        <img src="./assets/img/sitepoint.svg" alt="sitepoint">
+                    </a>
                 </div>
             </div>
         </div>
@@ -122,7 +132,6 @@
                 </div>
             </div>
         </div>
-
         <!-- Featured  -->
         <div class="featured">
             <div class="content">
