--- a/index.html
+++ b/index.html
@@ -19,41 +19,44 @@
 <body>
     <main>
         <!-- Header -->
-        <header>
-            <div class="header">
-                <div class="content">
-                    <nav class="navbar">
-                        <!-- Logo -->
-                        <img src="./assets/img/logo.svg" alt="Besnik">
-                        <!-- Navigation -->
-                        <ul>
-                            <li><a href="#!">Home</a></li>
-                            <li><a href="#!">Fratures</a></li>
-                            <li><a href="#!">Service</a></li>
-                            <li><a href="#!">Listed</a></li>
-                            <li><a href="#!">Contact</a></li>
-                        </ul>
-                        <!-- Action -->
-                        <div class="action">
-                            <a href="#!" class="action-link">Sign in</a>
-                            <a href="#!" class="btn action-btn">Sign up</a>
-                        </div>
-                    </nav>
-                    <!-- Hero -->
-                    <div class="hero">
-                        <div class="info">
-                            <p class="sub-title">Welcome to Besnik Agency</p>
-                            <h1 class="title">Discover a place you'll love to live.</h1>
-                            <p class="desc">Get the best real estate deals first,
-                                before they hit the mass market! hot foreclosure deals with one simple search</p>
-                            <!-- call hero action -->
-                            <a href="#!" class="btn hero-cta">More About Us</a>
-                        </div>
-                        <img src="assets/img/hero-img.svg" alt="Discover a place you'll love to live." class="hero-img">
+        <header class="fixed-header">
+            <div class="content">
+                <nav class="navbar">
+                    <!-- Logo -->
+                    <img src="./assets/img/logo.svg" alt="Besnik">
+                    <!-- Navigation -->
+                    <ul>
+                        <li><a href="#!">Home</a></li>
+                        <li><a href="#!">Fratures</a></li>
+                        <li><a href="#!">Service</a></li>
+                        <li><a href="#!">Listed</a></li>
+                        <li><a href="#!">Contact</a></li>
+                    </ul>
+                    <!-- Action -->
+                    <div class="action">
+                        <a href="#!" class="action-link">Sign in</a>
+                        <a href="#!" class="btn action-btn">Sign up</a>
                     </div>
-                </div>
+                </nav>
             </div>
         </header>
+        <!--  -->
+        <div class="hero-header">
+            <div class="content">
+                <!-- Hero -->
+                <div class="hero">
+                    <div class="info">
+                        <p class="sub-title">Welcome to Besnik Agency</p>
+                        <h1 class="title">Discover a place you'll love to live.</h1>
+                        <p class="desc">Get the best real estate deals first,
+                            before they hit the mass market! hot foreclosure deals with one simple search</p>
+                        <!-- call hero action -->
+                        <a href="#!" class="btn hero-cta">More About Us</a>
+                    </div>
+                    <img src="assets/img/hero-img.svg" alt="Discover a place you'll love to live." class="hero-img">
+                </div>
+            </div>
+        </div>
 
         <!-- Clients -->
         <div class="clients">
