--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
         </header>
         <!--  -->
-        <div class="hero-header">
+        <div class="hero-wrap">
             <div class="content">
                 <!-- Hero -->
                 <div class="hero">
