--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <main>
+    <main id="home">
         <!-- Header -->
         <header class="fixed-header">
             <div class="content">
@@ -26,11 +26,11 @@
                     <img src="./assets/img/logo.svg" alt="Besnik">
                     <!-- Navigation -->
                     <ul>
-                        <li><a href="#!">Home</a></li>
-                        <li><a href="#!">Fratures</a></li>
-                        <li><a href="#!">Service</a></li>
-                        <li><a href="#!">Listed</a></li>
-                        <li><a href="#!">Contact</a></li>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#fratures">Fratures</a></li>
+                        <li><a href="#service">Service</a></li>
+                        <li><a href="#list">Listed</a></li>
+                        <li><a href="#contact">Contact</a></li>
                     </ul>
                     <!-- Action -->
                     <div class="action">
@@ -40,7 +40,7 @@
                 </nav>
             </div>
         </header>
-        <!--  -->
+        <!-- Home -->
         <div class="hero-wrap">
             <div class="content">
                 <!-- Hero -->
@@ -95,7 +95,7 @@
         </div>
 
         <!-- Guides -->
-        <div class="guides">
+        <div class="guides" id="list">
             <div class="content">
                 <h2 class="sub-title">How its works?</h2>
                 <p class="desc">Everything you need to know when you're looking to buy, rent, or sell - all in one
@@ -136,7 +136,7 @@
             </div>
         </div>
         <!-- Featured  -->
-        <div class="featured">
+        <div class="featured" id="fratures">
             <div class="content">
                 <header>
                     <h2 class="sub-title">Featured Properties</h2>
@@ -224,7 +224,7 @@
         </div>
 
         <!-- Stats -->
-        <div class="stats">
+        <div class="stats" id="service">
             <div class="content">
                 <div class="row">
                     <div class="img-block">
@@ -318,7 +318,7 @@
             </div>
         </div>
         <!-- Footer -->
-        <footer class="footer">
+        <footer class="footer" id="contact">
             <div class="content">
                 <div class="row row-top">
                     <div class="column">
