--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>F8 projects</title>
+    <!-- favicon -->
+     <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <!-- ///////////////////////////////////////////////////// -->
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/fonts/stylesheet.css">
     <link rel="stylesheet" href="./assets/css/styles.css">
@@ -17,29 +23,29 @@
 </head>
 
 <body>
-    <main id="home">
-        <!-- Header -->
-        <header class="fixed-header">
-            <div class="content">
-                <nav class="navbar">
-                    <!-- Logo -->
-                    <a href="#"><img src="./assets/img/logo.svg" alt="Besnik"></a>
-                    <!-- Navigation -->
-                    <ul>
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#fratures">Fratures</a></li>
-                        <li><a href="#service">Service</a></li>
-                        <li><a href="#list">Listed</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                    <!-- Action -->
-                    <div class="action">
-                        <a href="#!" class="action-link">Sign in</a>
-                        <a href="#!" class="btn action-btn">Sign up</a>
-                    </div>
-                </nav>
-            </div>
-        </header>
+    <!-- Header -->
+    <header class="fixed-header">
+        <div class="content">
+            <nav class="navbar">
+                <!-- Logo -->
+                <a href="#"><img src="./assets/img/logo.svg" alt="Besnik"></a>
+                <!-- Navigation -->
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#fratures">Fratures</a></li>
+                    <li><a href="#service">Service</a></li>
+                    <li><a href="#list">Listed</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+                <!-- Action -->
+                <div class="action">
+                    <a href="#!" class="action-link">Sign in</a>
+                    <a href="#!" class="btn action-btn">Sign up</a>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <main>
         <!-- Home -->
         <div class="hero-wrap">
             <div class="content">
@@ -317,85 +323,85 @@
                 <img src="./assets/img/img-subscribe.svg" alt="Subscribe to our Newsletter!" class="image">
             </div>
         </div>
-        <!-- Footer -->
-        <footer class="footer" id="contact">
-            <div class="content">
-                <div class="row row-top">
-                    <div class="column">
-                        <h3 class="heading">Product</h3>
-                        <ul class="list">
-                            <li class="item">
-                                <a href="#!">Listing</a>
-                            </li>
-                            <li class="item">
-                                <a href="#!">Property</a>
-                            </li>
-                            <li class="item">
-                                <a href="#!">Agents</a>
-                            </li>
-                            <li class="item">
-                                <a href="#!">Blog</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="column">
-                        <h3 class="heading">Resources</h3>
-                        <ul class="list">
-                            <li class="item">
-                                <a href="#!">Our Homes</a>
-                            </li>
-                            <li class="item">
-                                <a href="#!">Member Stories</a>
-                            </li>
-                            <li class="item">
-                                <a href="#!">Video</a>
-                            </li>
-                            <li class="item">
-                                <a href="#!">Free trial</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="column">
-                        <h3 class="heading">Company</h3>
-                        <ul class="list">
-                            <li class="item">
-                                <a href="#!">Patnerships</a>
-                            </li>
-                            <li class="item">
-                                <a href="#!">Terms of use</a>
-                            </li>
-                            <li class="item">
-                                <a href="#!">Privacy</a>
-                            </li>
-                            <li class="item">
-                                <a href="#!">Sitemap</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="column">
-                        <h3 class="heading">Get in touch</h3>
-                        <p class="desc">You’ll find your next home, in any style you prefer.</p>
-                        <div class="social">
-                            <a href="#!" class="social-link">
-                                <img src="./assets/img/icon-facebook.svg" alt="facebook" class="icon-social">
-                            </a>
-                            <a href="#!" class="social-link">
-                                <img src="./assets/img/icon-twitter.svg" alt="twitter" class="icon-social">
-                            </a>
-                            <a href="#!" class="social-link">
-                                <img src="./assets/img/icon-linkedin.svg" alt="linkedin" class="icon-social">
-                            </a>
-                        </div>
-                    </div>
+    </main>
+    <!-- Footer -->
+    <footer class="footer" id="contact">
+        <div class="content">
+            <div class="row row-top">
+                <div class="column">
+                    <h3 class="heading">Product</h3>
+                    <ul class="list">
+                        <li class="item">
+                            <a href="#!">Listing</a>
+                        </li>
+                        <li class="item">
+                            <a href="#!">Property</a>
+                        </li>
+                        <li class="item">
+                            <a href="#!">Agents</a>
+                        </li>
+                        <li class="item">
+                            <a href="#!">Blog</a>
+                        </li>
+                    </ul>
                 </div>
-
-                <div class="row row-end">
-                    <img src="./assets/img/logo.svg" alt="logo" class="logo">
-                    <p class="copyright">Copyright 2020.com, All rights reserved.</p>
+                <div class="column">
+                    <h3 class="heading">Resources</h3>
+                    <ul class="list">
+                        <li class="item">
+                            <a href="#!">Our Homes</a>
+                        </li>
+                        <li class="item">
+                            <a href="#!">Member Stories</a>
+                        </li>
+                        <li class="item">
+                            <a href="#!">Video</a>
+                        </li>
+                        <li class="item">
+                            <a href="#!">Free trial</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="column">
+                    <h3 class="heading">Company</h3>
+                    <ul class="list">
+                        <li class="item">
+                            <a href="#!">Patnerships</a>
+                        </li>
+                        <li class="item">
+                            <a href="#!">Terms of use</a>
+                        </li>
+                        <li class="item">
+                            <a href="#!">Privacy</a>
+                        </li>
+                        <li class="item">
+                            <a href="#!">Sitemap</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="column">
+                    <h3 class="heading">Get in touch</h3>
+                    <p class="desc">You’ll find your next home, in any style you prefer.</p>
+                    <div class="social">
+                        <a href="#!" class="social-link">
+                            <img src="./assets/img/icon-facebook.svg" alt="facebook" class="icon-social">
+                        </a>
+                        <a href="#!" class="social-link">
+                            <img src="./assets/img/icon-twitter.svg" alt="twitter" class="icon-social">
+                        </a>
+                        <a href="#!" class="social-link">
+                            <img src="./assets/img/icon-linkedin.svg" alt="linkedin" class="icon-social">
+                        </a>
+                    </div>
                 </div>
             </div>
-        </footer>
-    </main>
+
+            <div class="row row-end">
+                <img src="./assets/img/logo.svg" alt="logo" class="logo">
+                <p class="copyright">Copyright 2020.com, All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
